objects/Beer__c.object
<CustomObject>
    <fields>
        <fullName>Alcohol__c</fullName>
        <label>Alcohol %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Consumed_Quantity__c</fullName>
        <label>Consumed Quantity</label>
        <summarizedField>Cart_Item__c.Item_Quantity__c</summarizedField>
        <summaryForeignKey>Cart_Item__c.Beer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <formula>Total_Quantity__c -  Consumed_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>brewery_Name__c</fullName>
        <label>brewery_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>brewery_id__c</fullName>
        <label>brewery_id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Beer</label>
    <nameField>
        <label>Beer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>